[project]
name = "emf_labelprint"
version = "0.1.0"
description = ""
authors = [{ name = "Russ Garrett", email = "russ@garrett.co.uk" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "click>=8.1.7,<9",
    "colorama>=0.4.6,<0.5",
    "python-dotenv>=1.0.0,<2",
    "rich>=13.7.0,<14",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2",
    "pylint>=3.0.3,<4",
    "types-requests>=2.31.0.20240106,<3",
]

[tool.uv]
default-groups = "all"
